--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,13 @@ footer a {
     right: 140px;
     margin: 5px 0 15px 0;
   }
+  /* secondary page hero */
+.hero-secondary {
+  margin: 20px;
+  background-color: black;
+  font-size: 20px;
+  color: red;
+}
 
  .hero-form h3 {
      font-size: 24px;
@@ -238,7 +245,7 @@ footer a {
     display: inline-block;
     vertical-align: top;
     text-align: left;
-    margin: 30px 0 0 75px;
+    margin: 30px 0 0 60px;
     color: white;
   }
 
