add flexbox to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,13 +34,15 @@ header {
     padding-right: 15px;
     padding-bottom: 20px;
     padding-left: 25px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
   header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
   }
   
   header a {
@@ -48,7 +50,6 @@ header {
     color: #fce138;
   }
   header nav {
-    float: right;
     margin: 7px 0;
   }
   header nav ul li {
