--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
   }
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
 body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
@@ -12,6 +17,7 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    z-index: 9999;
   }
    /* Applies 20px to every side (top, right, bottom, left) */
  header {
@@ -49,14 +55,14 @@ header {
   header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
   }
   header nav {
     margin: 7px 0;
@@ -75,13 +81,13 @@ header {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
   }
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -89,7 +95,7 @@ footer {
     flex-wrap: wrap;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -97,7 +103,7 @@ footer div {
     line-height: 1.5;
 }
 footer a {
-    color: #024e76
+    color: var(--secondary-color);
 }
 .section {
     padding: 60px;
@@ -117,10 +123,10 @@ footer a {
   /* Hero Style End */
 
   .hero-form {
-    border: 3px solid #024e76;
+    border: 3px solid ;
     background-color: rgb(252, 225, 56, 0.8);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     margin: 5px 0 15px 0;
     width: 40%;
     margin: 3.5%;
@@ -138,7 +144,7 @@ footer a {
   .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   /* secondary page hero */
@@ -155,7 +161,7 @@ footer a {
  }
 
  .form-input {
-     border: 1px solid #024e76;
+     border: 1px solid ;
      display: block;
      padding: 7px 15px;
      font-size: 16px;
@@ -172,8 +178,8 @@ footer a {
     margin: 0 5px;
   }
   button {
-      background-color: #024e76;
-      color: #fce138;
+      background-color: var(--secondary-color);
+      color: var(--primary-color);
       border: none;
       padding: 10px 20px;
       font-size: 16px;
@@ -182,6 +188,61 @@ footer a {
   button:hover {
     background-color: #39a6b2;  
   }
+
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid ;  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--secondary-color);
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, #39a6b2, );
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid ;
+  border-bottom: 2px solid ;
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -191,11 +252,11 @@ footer a {
     text-align: center;
   }
   .steps {
-      background: #fce138;
+      background: var(--primary-color);
   }
   .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -204,7 +265,7 @@ footer a {
   }
   
   .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
   }
   
   .secondary-border {
@@ -212,7 +273,7 @@ footer a {
   }
   
   .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
   }
@@ -245,7 +306,7 @@ footer a {
   .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76
+    color: var(--secondary-color);
   }
 
   .step {
@@ -264,8 +325,8 @@ footer a {
 
   .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
   }
   .trainers {
@@ -298,10 +359,10 @@ footer a {
     font-size: 17px;
   }
   .contact {
-    background: #024e76;
+    background: var(--secondary-color);
   }
   .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
   }
   .contact-info iframe {
     height: 400px; 
@@ -319,7 +380,7 @@ footer a {
   margin: 15px;
 }
   .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
   }
   
@@ -335,7 +396,7 @@ footer a {
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -350,19 +411,19 @@ footer a {
   .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
     border-radius: 10px;
   }
   .contact-form button:hover {
-    color: #fce138;
+    color: var(--primary-color);
     background: #39a6b2;
   }
   .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
   }
 
   .flex-row {
@@ -445,7 +506,7 @@ footer a {
         flex: 100%;  
       }
     }
-}
+
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
